10_Certificates/orchestration/weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment-1
spec:
  selector:
    matchLabels:
      greeting: hello
      version: one
  replicas: 3
  template:
    metadata:
      labels:
        greeting: weather 
        version: one
    spec:
      containers:
      - name: hello-app-1
        image: "us-central1-docker.pkg.dev/ensign-421602/ensign-public/weather:extra"
