10_Certificates/orchestration/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather 
spec:
  type: NodePort
  selector:
    greeting: weather 
    version: one
  ports:
  - protocol: TCP
    port: 5000 
    targetPort: 5555
