10_Certificates/orchestration/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    # kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: weather-ip #you'll need to swap weather-ip for yours `gcloud compute addresses list`.  
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: weather
            port:
              number: 5000 
      - path: /v1
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world-1
            port:
              number: 60000 
      - path: /v2
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world-2 
            port:
              number: 80
